[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GeoSpatialVisualization"
version = "2024.08.01"
dependencies = [
  "bs4",
  "requests",
  "numpy",
  "pandas",
  "geojson",
  "geopandas",
  "seaborn",
  "folium",
  "lxml"
]
requires-python = ">=3.11"
authors = [
  {name = "Robert Resch", email = "fresch.perspectives@outlook.com"}
]
maintainers = [
  {name = "Robert Resch", email = "fresch.perspectives@outlook.com"}
]
description = "A simple S&P Market Cap Visualization by Headquarters Example"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["S&P"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
